--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="col-lg-6">
+<div class="col-md-6">
   <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-question-circle fa-fw"></i>About</h3>
@@ -16,7 +16,7 @@
      </div>
   </div>
 </div>
-<div class="col-lg-6">
+<div class="col-md-6">
   <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-user fa-fw"></i>System Analytics</h3>
@@ -50,6 +50,6 @@
         </div>
       </div> <!-- panel-body-->
   </div> <!-- panel -->
-</div> <!-- col-lg-4-->
+</div> <!-- col-md-4-->
 
 {% endblock %}
