--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,21 +11,21 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" >
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav side-nav">
-                <li><a href="{{ url_for('index') }}"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a></li>
-                <li><a href="{{ url_for('dox') }}"><i class="fa fa-fw fa-file-text"></i> D0x</a></li>
-                <li><a href="{{ url_for('geoip') }}"><i class="fa fa-fw fa-location-arrow"></i> GeoIP Location</a></li>
-                <li><a href="{{ url_for('nmap') }}"><i class="fa fa-fw fa-list"></i> webNmap </a></li>
-                <li><a href="{{ url_for('dns') }}"><i class="fa fa-fw fa-wrench"></i> DNS Enumeration</a></li>
-            </ul>
+          <ul class="nav navbar-nav side-nav">
+            <li><a href="{{ url_for('index') }}"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a></li>
+            <li><a href="{{ url_for('dox') }}"><i class="fa fa-fw fa-file-text"></i> D0x</a></li>
+            <li><a href="{{ url_for('geoip') }}"><i class="fa fa-fw fa-location-arrow"></i> GeoIP Location</a></li>
+            <!--<li><a href="{{ url_for('nmap') }}"><i class="fa fa-fw fa-list"></i> webNmap </a></li>-->
+            <li><a href="{{ url_for('dns') }}"><i class="fa fa-fw fa-wrench"></i> DNS Enumeration</a></li>
+          </ul>
         </div>
     </nav>
   {% endblock %}    
