Revamp as doxbox
* Cleanup structure
* Documentation
* Codestyle
* Delete unnecessary files

--- a/doxbox/templates/index.html
+++ b/doxbox/templates/index.html
@@ -7,9 +7,9 @@
     </div>
     <div class="panel-body">
         <div class="list-group">
-          D0xk1t is an active reconaissance web application developed for 
+          doxbox is an active reconaissance web application developed for
           penetration testing. Based off of the preceding command line script,
-          this new revision of D0xk1t features a user interface, as well as 
+          this new revision of doxbox features a user interface, as well as
           capabilities for self hosting/deployment, and an easy-to-use admin
           dashboard and navigation.
        </div>
@@ -44,8 +44,8 @@
      </div>
      <div class="panel-body">
          <div class="list-group">
-           <a href="https://github.com/ex0dus-0x/D0xk1t/issues"><img src="https://img.shields.io/github/issues/ex0dus-0x/D0xk1t.svg" /></a>
-           <img src="https://img.shields.io/github/forks/ex0dus-0x/D0xk1t.svg" />
+           <a href="https://github.com/ex0dus-0x/doxbox/issues"><img src="https://img.shields.io/github/issues/ex0dus-0x/doxbox.svg" /></a>
+           <img src="https://img.shields.io/github/forks/ex0dus-0x/doxbox.svg" />
            <a href="https://choosealicense.com/"><img src="https://img.shields.io/badge/license-GPLv2-blue.svg" /></a>
         </div>
       </div> <!-- panel-body-->
