--- a/doxbox/templates/geoip.html
+++ b/doxbox/templates/geoip.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% import "bootstrap/wtf.html" as wtf %} 
+{% import "bootstrap/wtf.html" as wtf %}
 {% block title %} {{ title }} {% endblock %}
 {% block content %}
 <div class="col-md-12">
@@ -10,7 +10,7 @@
   </form>
 </div>
 {% if latitude and longitude %}
-<div class="col-md-2 col-md-offset-2">{{ googlemap("geoip_map", lat=latitude, lng=longitude, markers=[(latitude, longitude)])}}</div>    
+<div class="col-md-2 col-md-offset-2">{{ googlemap("geoip_map", lat=latitude, lng=longitude, markers=[(latitude, longitude)])}}</div>
 {% endif %}
 <div class="col-md-4 col-md-offset-2">
   <div class="panel panel-default">
@@ -25,7 +25,7 @@
             <tr><th scope="row">Latitude / Longitude</th><td>{{ ip_data["latitude"] }} / {{ip_data["longitude"]}}</td></tr>
             <tr><th scope="row">Postal Code</th><td>{{ ip_data["postal_code"] }}</td></tr>
           </table>
-          {% else %}(once collected, D0xk1t will display all known information on the IP address)              
+          {% else %}(once collected, doxbox will display all known information on the IP address)
           {% endif %}
        </div>
     </div>
